--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,22 @@
 /*Travel Styling Here */
+body {
+    background-color: black;
+}
+
+.card-deck {
+    background-color: red;
+    height: 800px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 80px;
+    margin-left: 80px;
+}
+
+.card-body {
+    background-color: pink;
+}
+
+.btn-primary {
+margin-top: 20px;
+float: right
+}
