--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,27 @@ html, body {
 
 .btn-primary {
 margin-top: 20px;
-float: center;
+/* float: center; */
+background-color: rgb(100, 100, 100, 0);
+color: black;
+padding: 2% 3%;
+border: 2px solid rgb(100, 100, 100, 1);
+outline: none;
+
 
 }
 
+.btn-primary:hover {
+    text-decoration: none;
+    color: white;
+    border: 2px solid rgb(100, 100, 100, 0);
+    background-color: rgb(100, 100, 100, 1);
+    outline: none;
+    }
+
+.btn-primary:focus {
+   outline: none;
+}
 .container-fluid {
     background-color: lightgray;
     font: tahoma 20px;
@@ -50,4 +67,25 @@ height: 25%;
 .page-header {
 text-align: center;
 background-color: red
+}
+
+#userName {
+    outline: none;
+    border: none;
+    border-bottom: 2px solid black;
+    background-color: lightgray;
+}
+
+#userName:focus {
+    outline: none;
+    border: none;
+}
+
+#userName:active {
+    outline: none;
+    border:none;
+}
+
+input.middle:focus {
+    outline-width: 0;
 }
