--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,90 +7,41 @@ html, body {
     /* background-image: url("../images/brown_background.jpg") */
 }
 
-/* Special CSS for Scroll Reveal */
-
-html.sr, .load-hidden {
-    visibility: hidden;
-}
-
 /* Font Styling */
 h1 {
-    font-family: 'harabarahanditalic', Arial, sans-serif;
+    /* font-family: 'harabarahanditalic', Arial, sans-serif; */
+    font-family: 'Gloria Hallelujah', cursive;
     font-weight:normal;
     font-style:normal;
     font-size: 3em;
-    margin-top: 1%;
+    margin: 3% 0% 3%;
 }
        
 p {
 font-family: 'Pompiere', cursive;
-font-size: 3em;
+font-size: 2em;
 font-weight: bold;
 }
 
+/*Button Styling */
 button {
     background-color: rgb(0,0,0,0);
     border: 2px solid rgb(0,0,0,0);
+    font-family: 'Pompiere', cursive;
 }
 
 button:hover {
+    font-family: 'Pompiere', cursive;
     font-weight: bold;
 }
 
-/*Class Styling*/
-
-.weatherReport {
-    padding: 3%;
-    font-size: 1.5em;
-}
-
-.card-body {
-    height: 100%;
-}
-
-.form-control {
-    text-align: center;
-    margin: auto;
-    width: 100%;
-}
-
-.btn-primary {
-margin-top: 20px;
-
-/* float: center; */
-background-color: rgb(100, 100, 100, 0);
-color: black;
-padding: 2% 3%;
-border: 2px solid rgb(100, 100, 100, 1);
-outline: none;
-}
-
-.btn-primary:hover {
-    text-decoration: none;
-    color: white;
-    border: 2px solid rgb(100, 100, 100, 0);
-    background-color: rgb(100, 100, 100, 1);
-    outline: none;
-    }
-
-button:focus, .btn-primary:focus {
-   outline: none;
-}
-
+/*General Class Styling*/
+/*Grid Styling - Containers/rows/columns*/
 .container-fluid {
     height: 100%;
     text-align: center;
     padding: auto;
     margin: auto;
-}
-
-ul {
-    list-style-type: none;
-}
-
-li {
-    border: 2px solid rgb(0,0,0,0);
-    display: inline-block;
 }
 
 /*The row styling sets the heights of the rows, setting the grids on each page*/
@@ -133,36 +84,128 @@ li {
 
 
 
-.page-header {
-text-align: center;
-background-color: red
+/*Weather Results*/
+.weatherReport {
+    padding: 3%;
+    font-size: 1.5em;
+}
+
+/*User Input Cards*/
+.card-body {
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.35);
+    border: 5px ridge rgba(180, 172, 166,0.35);
+    border-radius: 15px;
+    margin: 0 auto;
+    width: 80%;
+    height: 100%;
+}
+
+.formInput {
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    border: 2px solid rgb(0,0,0,0);
+    border-bottom: 2px solid rgb(0,0,0,1);
+    outline: none;
+    background-color: rgb(0,0,0,0)
+}
+
+.formInput:focus, input:focus {
+    border: 2px solid rgb(0,0,0,0);
+    border-bottom: 2px solid rgb(0,0,0,1);
+    outline: none;
+}
+
+.btn-primary {
+    margin-top: 3%;
+    background-color: rgb(100, 100, 100, 0);
+    color: black;
+    padding: 2% 6%;
+    border: 2px solid rgb(100, 100, 100, 1);
+    outline: none;
+}
+
+.btn-primary:hover {
+    text-decoration: none;
+    color: white;
+    border: 2px solid rgb(100, 100, 100, 0);
+    background-color: rgb(100, 100, 100, 1);
+    outline: none;
+}
+
+button:focus, .btn-primary:focus {
+   outline: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    border: 2px solid rgb(0,0,0,0);
+    display: inline-block;
 }
 
 /*ID Styling */
+
+/*These are the background colors used in the containers*/
+
+@keyframes BackgroundAnimator {
+    0% {background-position: 0% 50%}
+    50% {background-position: 100% 50%}
+    100% {background-position: 0% 50%}
+}
+
+#page1 {
+    background-image: linear-gradient(45deg,rgba(180, 172, 166,1),rgba(120, 153, 130,1));
+    background-size: 400%;
+    animation-name: BackgroundAnimator;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
+
+#page2 {
+    background-image: linear-gradient(45deg,rgba(120, 153, 130,1),rgb(102, 117, 134));
+    background-size: 400%;
+    animation-name: BackgroundAnimator;
+    animation-duration: 10s;
+    animation-iteration-count: infinite
+}
+
+#page4 {
+    background-image: linear-gradient(45deg,rgb(116, 105, 98),rgba(180, 172, 166,1)); 
+    color: black;
+    background-size: 400%;
+    animation-name: BackgroundAnimator;
+    animation-duration: 10s;
+    animation-iteration-count: infinite
+}
+
+#page1Center {
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.35);
+    border: 5px ridge rgba(180, 172, 166,0.35);
+    border-radius: 15px;
+}
+
+#resultTitle {
+    margin-bottom: 0;
+}
+
+#resultSubTitle {
+    font-size: 1em;
+}
+
+
 #userIn {
     margin-top: 5%;
     height: 2em;
+
 }
 
 #cityIn {
     width: 100%;
-}
-
-#userName {
-    outline: none;
-    border: none;
-    border-bottom: 2px solid black;
-    background-color: lightgray;
-}
-
-#userName:focus {
-    outline: none;
-    border: none;
-}
-
-#userName:active, {
-    outline: none;
-    border:none;
 }
 
 .restLink {
@@ -180,11 +223,7 @@ background-color: red
 
 }
 
-input.middle:focus {
-    outline-width: 0;
-}
-
-/*Modal Styling Fix. I did not write this code. Source: https://github.com/shlomiassaf/ngx-modialog/issues/280 */
+/*Modal Styling Fix. We did not write this code. Source: https://github.com/shlomiassaf/ngx-modialog/issues/280 */
 .fade.in {
     opacity: 1;
 }
