--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,23 +206,26 @@ li {
     font-size: 1.2em;
     z-index: 3;
 }
-
+/*This is the styling for the restuarant results*/
+.restOptions {
+    display: inline-block;
+    margin: 2%;
+}
 /*This is the styling for the restuarant results*/
 .restLink {
     text-decoration: none;
     color: black;
     border: 2px solid rgb(0,0,0,0);
     padding: 1%;
-    margin-top: 4%;
     font-size: 1.1em;
 }
 /*This is the styling for the restuarant results*/
 .restLinkNight {
+    display: inline-block;
     text-decoration: none;
     color: white;
     border: 2px solid rgb(255,255,255,0);
     padding: 1%;
-    margin-top: 4%;
     font-size: 1.1em;
 }
 /*This is the styling for the restuarant results*/
@@ -244,7 +247,7 @@ li {
     0% { font-size: 1.1em;
          border: 2px solid rgb(0,0,0,0);
          color: black}
-    100% {font-size: 1.5em;
+    100% {font-size: 1.2em;
           border: 2px solid rgb(0,0,0,1);
           color: black;}
 }
@@ -253,7 +256,7 @@ li {
     0% { font-size: 1.1em;
          border: 2px solid rgb(255,255,255,0);
          color: white}
-    100% {font-size: 1.5em;
+    100% {font-size: 1.2em;
           border: 2px solid rgb(255,255,255,1);
           color: white;}
 }
@@ -285,7 +288,7 @@ li {
     animation-iteration-count: infinite
 }
 
-#page4 {
+#page4, .row9, .row10, .row11, .row12 {
     background-image: linear-gradient(45deg,rgb(116, 105, 98),rgba(180, 172, 166,1)); 
     color: black;
     background-size: 400%;
@@ -295,9 +298,10 @@ li {
 }
 
 #mapContainer {
-    height: 480px;
-    width: 840px;
+    height: 600px;
+    width: 1000px;
     margin: auto;
+    padding: 5%;
 }
 
 #page1Center {
@@ -324,6 +328,10 @@ li {
 #cityIn {
     width: 50%;
     text-transform: capitalize;
+}
+
+#searchWidget {
+    margin: auto;
 }
 
 
