--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,40 @@ html, body {
     /* background-image: url("../images/brown_background.jpg") */
 }
 
+.slidetitle {
+
+    padding: 10% 10% 0;
+}
+
+.slidecontent {
+
+    padding: 10%;
+}
+
+#pres1 {
+    background-image: linear-gradient(45deg,rgb(187, 137, 187),rgb(102, 117, 134));
+    background-size: 400%;
+    animation-name: BackgroundAnimator;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
+
+#pres2 {
+    background-image: linear-gradient(45deg,rgb(102, 117, 134),rgb(199, 166, 106));
+    background-size: 400%;
+    animation-name: BackgroundAnimator;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
+
+#pres3 {
+    background-image: linear-gradient(45deg,rgb(199, 166, 106),rgba(180, 172, 166,1));
+    background-size: 400%;
+    animation-name: BackgroundAnimator;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
+
 
 
 /* Font Styling */
@@ -334,7 +368,29 @@ li {
     margin: auto;
 }
 
+#pres1Center {
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.35);
+    border: 5px ridge rgba(180, 172, 166,0.35);
+    border-radius: 15px;
+    z-index: 2;
+}
 
+#pres2Center {
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.35);
+    border: 5px ridge rgba(180, 172, 166,0.35);
+    border-radius: 15px;
+    z-index: 2;
+}
+
+#pres3Center {
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 0px 10px rgba(255, 255, 255, 0.35);
+    border: 5px ridge rgba(180, 172, 166,0.35);
+    border-radius: 15px;
+    z-index: 2;
+}
 
 /*Modal Styling Fix. We did not write this code. Source: https://github.com/shlomiassaf/ngx-modialog/issues/280 */
 .fade.in {
