--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,12 @@
 }
 /*html, body styled to be the same size as the view port */
 html, body {
-    height: 100%;
+    height: 99%;
     padding:0;
     margin: 0;
+    overflow-x: initial;
+    overflow: initial;
+    overflow-y: initial;
     /* background-image: url("../images/brown_background.jpg") */
 }
 
@@ -336,6 +339,13 @@ li {
     width: 1000px;
     margin: auto;
     padding: 5%;
+    overflow-x: initial;
+    overflow: initial;
+    overflow-y: initial;
+}
+
+html.sr .load-hidden {
+    visibility: hidden;
 }
 
 #page1Center {
