--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,20 @@
 /*Travel Styling Here */
-
 @viewport {
     width: device-width;
     zoom: 1.0;
 }
+
+
+@media only screen and (min-width : 992px) {
+    /* For mobile phones: */
+    [class*="row-"] {
+        width: 100%;
+    }
+}
+
+
+
+
 /*html, body styled to be the same size as the view port */
 html, body {
     height: 100%;
@@ -434,3 +445,5 @@ html.sr .load-hidden {
 .modal-backdrop.in {
     opacity: 0.5;
 }
+
+
