--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,11 @@
 }
 
 
-@media only screen and (min-width : 992px) {
-    /* For mobile phones: */
-    [class*="row-"] {
+/* @media only screen and (min-width : 992px) {
+   [class*="row-"] {
         width: 100%;
     }
-}
+}  */
 
 
 
@@ -256,7 +255,7 @@ li {
 
 /*This is the styling for the food buttons*/
 .foodBtn {
-    font-size: 1.5em;
+    font-size: 1.2em;
     z-index: 3;
 }
 /*This is the styling for the restuarant results*/
